# blvm-consensus

./: .gitignore  AVX2_BENCHMARK_RESULTS.md  AVX2_IMPLEMENTATION_COMPLETE.md  BENCHMARKING_IMPROVEMENTS.md  CHANGELOG.md  CLOSING_THE_GAP.md  COMMIT_MSG.txt  CONTRIBUTING.md  CORE_PERFORMANCE_COMPARISON.md  Cargo.toml  FORMAL_VERIFICATION_OPTIMIZATION_PLAN.md  LICENSE  PERFORMANCE_SUMMARY.md  README.md  SECURITY.md  SHA_NI_BENCHMARK_RESULTS.md  SHA_NI_IMPLEMENTATION.md  SHA_NI_TESTING.md  SPEC_LOCK_DEPENDENCY.md  benchmark_results.txt  libscript_k256.rlib  rustfmt.toml  test_compact  test_script
.cargo/: config.toml.example
.github/workflows/: .trigger  ci.yml  coverage.yml  release.yml
benches/: bllvm_optimizations.rs  block_validation.rs  block_validation_realistic.rs  blvm_optimizations.rs  hash_operations.rs  mempool_operations.rs  performance_focused.rs  segwit_operations.rs  transaction_validation.rs  utxo_commitments.rs
blvm-spec/: ARCHITECTURE.md  PROTOCOL.md
docs/: CONSENSUS_COVERAGE_ASSESSMENT.md  ECDSA_BATCH_SIGHASH_DEBUG.md  EXACT_VERIFICATION_COUNTS.md  FEATURES.md  KANI_OPTIMIZATION_GUIDE.md  KANI_OPTIMIZATION_SUMMARY.md  KLEE_SETUP.md  MATHEMATICAL_PROTECTIONS.md  PROOF_LIMITATIONS.md  PROTECTION_COVERAGE.md  README.md  REFERENCE_NODE_RPC_TESTING.md  TEST_DATA_SOURCES.md  VERIFICATION.md
examples/: cpu_features.rs
fuzz/: CORPUS_GUIDE.md  Cargo.toml  README.md  TARGETS.md  init_corpus.sh  test_runner.py
fuzz/fuzz_targets/: bip113_median_time.rs  bip119_ctv.rs  bip66_validation.rs  bip_check_bip147.rs  bip_check_bip34.rs  bip_check_bip54.rs  bip_check_bip66.rs  bip_check_bip90.rs  block_header_validation.rs  block_validation.rs  compact_block_reconstruction.rs  crypto_tap_branch_hash.rs  crypto_tap_leaf_hash.rs  crypto_tap_sighash_hash.rs  crypto_taproot_output_key.rs  crypto_verify_ecdsa.rs  crypto_verify_ecdsa_direct.rs  crypto_verify_schnorr.rs  crypto_verify_schnorr_batch.rs  differential_fuzzing.rs  economic_validation.rs  locktime_bip65.rs  locktime_decode.rs  locktime_sequence.rs  locktime_sequence_fields.rs  mempool_operations.rs  merkle_validation.rs  optimizations_batch_hash.rs  optimizations_memory_layout.rs  pow_validation.rs  reorganization.rs  script_eval_segwit_flags.rs  script_execution.rs  script_opcodes.rs  script_p2sh_push_only.rs  script_verify_witness_stack.rs  segwit_validation.rs  sequence_locks_validation.rs  serialization.rs  sighash_computation.rs  (+22 more)
proptest-regressions/: block.txt  pow.txt  reorganization.txt  script.txt  segwit.txt
scripts/: README.md  download_mainnet_blocks.sh  download_test_data.sh  get_proofs_by_tier.py  get_slow_harnesses.py  get_slow_harnesses.sh  manage_test_data.sh  pgo-build.sh  setup-spec-lock.sh  setup-spec.sh  sync-vendor-spec.sh  verify_core_test_vectors.sh
src/: activation.rs  bip113.rs  bip119.rs  bip348.rs  bip_validation.rs  block.rs  checkqueue.rs  config.rs  constants.rs  economic.rs  error.rs  ibd_tuning.rs  integration_proofs.rs  kani_helpers.rs  lib.rs  locktime.rs  mempool.rs  mining.rs  network.rs  opcodes.rs  optimizations.rs  orange_paper_constants.rs  orange_paper_property_helpers.rs  pow.rs  profile_log.rs  reorganization.rs  script.rs  script_exec_cache.rs  script_k256.rs  segwit.rs  sequence_locks.rs  sigop.rs  taproot.rs  test_utils.rs  transaction.rs  transaction_hash.rs  types.rs  utxo_overlay.rs  version_bits.rs  witness.rs
src/block/: apply.rs  connect.rs  header.rs  mod.rs  script_cache.rs
src/crypto/: avx2_batch.rs  hash_compare.rs  int_ops.rs  mod.rs  sha256_avx2.rs  sha_ni.rs  simd_bytes.rs
src/script/: arithmetic.rs  context.rs  control_flow.rs  crypto_ops.rs  mod.rs  signature.rs  stack.rs
src/secp256k1_backend/: blvm_impl.rs  mod.rs  secp256k1_impl.rs
src/serialization/: block.rs  mod.rs  transaction.rs  varint.rs
src/spam_filter/: mod.rs  script_analyzer.rs
src/utxo_commitments/: config.rs  data_structures.rs  initial_sync.rs  merkle_tree.rs  mod.rs  network_integration.rs  peer_consensus.rs  spam_filter.rs  verification.rs
tests/: ADDITIONAL_EDGE_CASES_IMPLEMENTED.md  BLINDSPOT_COVERAGE_REPORT.md  IMPLEMENTATION_SUMMARY.md  api_tests.rs  bip66_consensus_script_flags.rs  bip_activation_heights_verification.rs  block_164676_ibd_repro.rs  block_header_validation_verification.rs  block_ibd_repro.rs  block_ibd_snapshot_tests.rs  block_sigop_limits_verification.rs  block_weight_edge_cases.rs  bolero_fuzz.rs  coinbase_maturity.rs  coinbase_maturity_edge_cases.rs  coinbase_validation_verification.rs  compile_time_bip_verification.rs  comprehensive_unit_tests.rs  config_golden.rs  config_tests.rs  consensus_flags.rs  consensus_property_tests.rs  consensus_regression_tests.rs  core_vector_extractor.rs  cross_bip_property_tests.rs  difficulty_adjustment_verification.rs  duplicate_input_verification.rs  error_path_tests.rs  extract_core_vectors.sh  fee_calculation_verification.rs  historical_consensus.rs  integer_overflow_edge_cases.rs  integration_opportunities.rs  integration_tests.rs  little_endian_verification.rs  mainnet_blocks.rs  mainnet_script_flags_fork_split.rs  mempool_helper_tests.rs  mempool_rbf_edge_cases.rs  network_tests.rs  (+19 more)
tests/core_test_vectors/: README.md  VERIFICATION_RESULTS.md  block_tests.rs  integration_test.rs  mod.rs  script_tests.rs  transaction_tests.rs
tests/engineering/: bip112_csv_integration_tests.rs  bip113_integration_tests.rs  bip119_ctv_integration_tests.rs  bip65_cltv_integration_tests.rs  bip_interaction_tests.rs  bip_test_helpers.rs  integer_overflow_edge_cases.rs  mod.rs  parser_edge_cases.rs  resource_limits_edge_cases.rs  segwit_integration_tests.rs  serialization_edge_cases.rs  taproot_integration_tests.rs  transaction_size_edge_cases.rs  witness_validation_tests.rs
tests/fixtures/: consensus_config_default.json
tests/fuzzing/: arbitrary_impls.rs  block_validation.rs  libfuzzer_harness.rs  mod.rs  transaction_validation.rs
tests/integration/: bip_call_verification.rs  bip_compliance_tests.rs  bip_enforcement_tests.rs  bip_integration_kani_proofs.rs  bip_integration_smoke_tests.rs  bllvm_integration_tests.rs  (+12 more)
(+45 files in other folders)
