[package]
name = "blvm-consensus"
version = "0.1.6"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM: Direct mathematical implementation of Bitcoin consensus rules from the Orange Paper"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-consensus"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/blvm-consensus"
keywords = ["bitcoin", "consensus", "blockchain", "cryptocurrency", "proof"]
categories = ["cryptography::cryptocurrencies", "algorithms"]
rust-version = "1.83"

[lints.rust]
unexpected_cfgs = { level = "warn" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
smallvec = { version = "1.11", optional = true, features = ["serde", "const_generics"] }

# Consensus-critical cryptography - EXACT VERSIONS
# Default: blvm-secp256k1 (batch verification). Fallback: crates.io secp256k1 0.28 (libsecp256k1). NO secp256k1-fork.
secp256k1 = { version = "0.28", default-features = true }
# blvm-secp256k1: pure Rust, BIP 341 correct TapTweak (use for Taproot path)
blvm-secp256k1 = { path = "../blvm-secp256k1", optional = true }
# Enable SIMD optimizations for hashing
# The "asm" feature enables optimized assembly implementations
# Note: sha2-asm doesn't support Windows, so we use target-specific dependencies below
# sha2 is defined in target-specific sections only
digest = "0.10"  # Digest trait for Ripemd160::digest, Sha1::digest
ripemd = "=0.1.3"
sha1 = "=0.10.6"
# Consensus-critical: Exact version pinning for reproducibility
# DO NOT CHANGE without security review - this ensures identical builds
# and prevents supply chain attacks
bitcoin_hashes = "=0.11.0"

# Non-consensus-critical utilities - EXACT VERSIONS for supply chain security
serde = { version = "=1.0.228", features = ["derive"] }  # Updated for iroh 0.95 compatibility
serde_json = "=1.0.108"
anyhow = "=1.0.93"
thiserror = "=1.0.69"
# Binary serialization (for transaction/block encoding in differential tests)
bincode = "=1.3.3"
# Hex encoding (for RPC communication)
hex = "=0.4.3"
# Fast hash map for UTXO lookups (2-3x faster than std HashMap for fixed-size keys)
rustc-hash = { version = "2.0", optional = true }
# SipHash for sig cache keys (Bitcoin Core uses SipHash; ~10x faster than SHA-256 for 133-byte input)
siphasher = { version = "0.3", optional = true }
# raw_entry API for allocation-free sighash cache lookup (std HashMap raw_entry requires 1.81+)
hashbrown = { version = "0.14", optional = true }

# Spec-lock for mathematical verification
# LOCAL: Uses path (blvm-spec-lock in monorepo)
# CI: setup-spec-lock.sh clones to ../blvm-spec-lock before build - path works in both contexts
blvm-spec-lock = { path = "../blvm-spec-lock", default-features = false }
# Spec-macros for spec_locked attributes (migration in progress - commented out until committed)
# blvm-spec-macros = { path = "../blvm-spec-macros", optional = true }


[dev-dependencies]
# Formal verification tools - EXACT VERSIONS for reproducibility
proptest = "=1.5.0"
# Fuzzing framework for better test coverage ergonomics
bolero = "0.11"
# HTTP client for differential fuzzing
reqwest = { version = "0.11", features = ["json"], default-features = false }
# Async runtime for differential fuzzing tests
tokio = { version = "1.35", features = ["rt", "macros"] }
# Performance benchmarking framework
criterion = "0.5"

[features]
# Production (batch verification, fast paths) is default; blvm-secp256k1 is default crypto backend
default = ["production", "blvm-secp256k1"]
# Enable fuzzing tests (Bolero framework)
# Note: bolero is a dev-dependency, this feature is just for conditional compilation
# Users should use: cargo test --features bolero
bolero = []

# Local development: Use local filesystem path for blvm-spec-lock
# Only enable this when developing locally (not in CI)
# Usage: cargo build --features local-spec-lock
# Note: When enabled, [patch.crates-io] section overrides the crate dependency
local-spec-lock = []

# Production performance optimizations
# This feature enables runtime optimizations like caching and context reuse
# blvm-secp256k1: pure Rust crypto backend (ECDSA, Schnorr, Taproot) — default for profile/production
production = ["lru", "rayon", "smallvec", "rustc-hash", "hashbrown", "crossbeam-queue", "siphasher", "blvm-secp256k1"]

# Enable rayon for parallelization (optional, can be enabled independently)
rayon = ["dep:rayon"]

# Benchmarking utilities
# Enables cache clearing and state reset functions for reproducible benchmarks
benchmarking = []

# UTXO commitments module
# Enables UTXO set commitments and peer consensus sync
utxo-commitments = ["sparse-merkle-tree", "dep:rand"]
# Verify UTXO proofs during initial sync (optional, for coin-freeze attack mitigation)
utxo-proof-verification = []
# Parallel UTXO proof verification (requires rayon)
parallel-verification = ["rayon"]

# Property test strategies (transaction_with_witness_strategy, etc.) for spec-lock generated tests
# Required for integration tests in tests/spec_property_tests.rs
property-tests = []

# Note: spec-lock feature removed - constants and #[spec_locked] attributes are always available
# Property tests can use constants directly without any feature flag
# The #[spec_locked] attributes are just metadata for formal verification tools

# blvm-spec-macros feature (for spec_locked attributes)  
# Enables spec_locked attribute macro from blvm-spec-macros
# Commented out until blvm-spec-macros is committed
# blvm-spec-macros = ["dep:blvm-spec-macros"]

# Runtime invariant checks in production builds
# Enables runtime verification of mathematical invariants (supply, UTXO consistency, etc.)
# Can be enabled in production for additional safety at performance cost
runtime-invariants = []

# CTV (BIP119 CheckTemplateVerify) - proposed soft fork
# Enables OP_CHECKTEMPLATEVERIFY opcode support
ctv = []

# Profiling: eprintln! timing logs (PERF, BATCH, FAST_PATH). NOT for production.
profile = []

# CSFS (BIP348 CHECKSIGFROMSTACK) - proposed soft fork
# Enables OP_CHECKSIGFROMSTACK opcode support (Tapscript only)
csfs = []

# Use blvm-secp256k1 for Taproot tweak (correct BIP 341 tagged hash)
# When disabled, uses crates.io secp256k1 (plain SHA256 - non-BIP341)
blvm-secp256k1 = ["dep:blvm-secp256k1"]


[dependencies.lru]
version = "0.12"
optional = true

[dependencies.crossbeam-queue]
version = "0.3"
optional = true

[dependencies.rayon]
version = "1.8"
optional = true

[dependencies.sparse-merkle-tree]
version = "0.6"
optional = true

[dependencies.rand]
version = "=0.8.5"
optional = true

# Target-specific dependency configuration
# sha2-asm doesn't support Windows targets, so disable asm feature for Windows
# Define sha2 per-target to avoid sha2-asm on Windows
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "=0.10.9", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { version = "=0.10.9" }

# Also explicitly handle the GNU Windows target (for cross-compilation)
[target.x86_64-pc-windows-gnu.dependencies]
sha2 = { version = "=0.10.9" }

[profile.release]
# Aggressive optimizations for production builds
# Reference: Orange Paper Section 13.1 - Performance Considerations
opt-level = 3
lto = false        # off: fastest iteration; use thin/fat for production/CI
codegen-units = 1   # full inlining within crate (not LTO — doesn't cross crate boundaries)
strip = true
panic = "abort"  # Smaller binaries, no unwinding overhead

# Additional optimizations - ensure all dependencies are optimized
[profile.release.package."*"]
opt-level = 3

# blvm-secp256k1: single codegen unit for better inlining when used with blvm (production builds)
# Note: LTO cannot be set per-package; use RUSTFLAGS="-C lto=thin" or build-blvm-profile.sh for LTO
[profile.release.package."blvm-secp256k1"]
opt-level = 3
codegen-units = 1

# Profile-guided optimization (PGO) setup:
# 
# Automated PGO build script: ./scripts/pgo-build.sh
# 
# Manual PGO steps:
# 1. Build with instrumentation: RUSTFLAGS="-C profile-generate=/tmp/pgo-data" cargo build --release
# 2. Run benchmarks/tests to generate profile data: cargo bench --release
# 3. Build optimized: RUSTFLAGS="-C profile-use=/tmp/pgo-data" cargo build --release
# 
# Note: PGO works with stable Rust 1.70+ (LLVM 15+)
# Expected performance gain: 1.10-1.15x improvement

# Fast release: opt-level 2 for iteration (~2-3x faster compile)
[profile.release-fast]
inherits = "release"
opt-level = 2

[profile.release-fast.package."*"]
opt-level = 2

# Benchmark profile (faster iteration during development)
[profile.bench]
opt-level = 3
debug = false
strip = false
lto = "thin"  # Faster than "fat" for iterative benchmarking
codegen-units = 16  # Faster compilation

# blvm-spec-lock uses path dependency above - no patch needed
# secp256k1: crates.io 0.28 only. blvm-secp256k1 is default backend via feature. NO secp256k1-fork.
